--- a/arch/arm/configs/falcon_defconfig
+++ b/arch/arm/configs/falcon_defconfig
@@ -2,6 +2,13 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm 3.4.42 Kernel Configuration
 #
+
+#
+# Euphoria
+#
+CONFIG_STATE_NOTIFIER=y
+CONFIG_ADRENO_IDLER=y
+
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
