--- a/arch/arm/configs/falcon_defconfig
+++ b/arch/arm/configs/falcon_defconfig
@@ -8,6 +8,8 @@
 #
 CONFIG_STATE_NOTIFIER=y
 CONFIG_ADRENO_IDLER=y
+CONFIG_INTELLI_THERMAL_V2=y
+
 
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -2067,7 +2069,7 @@ CONFIG_THERMAL_HWMON=y
 # CONFIG_THERMAL_TSENS is not set
 # CONFIG_THERMAL_TSENS8960 is not set
 CONFIG_THERMAL_TSENS8974=y
-CONFIG_THERMAL_MONITOR=y
+# CONFIG_THERMAL_MONITOR is not set
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 # CONFIG_WATCHDOG is not set
