--- a/arch/arm/configs/falcon_defconfig
+++ b/arch/arm/configs/falcon_defconfig
@@ -9,6 +9,8 @@
 CONFIG_STATE_NOTIFIER=y
 CONFIG_ADRENO_IDLER=y
 CONFIG_INTELLI_THERMAL_V2=y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
 
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
