--- a/arch/arm/configs/falcon_defconfig
+++ b/arch/arm/configs/falcon_defconfig
@@ -11,6 +11,7 @@ CONFIG_ADRENO_IDLER=y
 CONFIG_INTELLI_THERMAL_V2=y
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
+CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
 CONFIG_POWERSUSPEND=y
 
 CONFIG_ARM=y
