--- a/arch/arm/configs/falcon_defconfig
+++ b/arch/arm/configs/falcon_defconfig
@@ -14,6 +14,7 @@ CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
 CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
 CONFIG_POWERSUSPEND=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_ASMP=y
 
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
