--- a/arch/arm/configs/peregrine_defconfig
+++ b/arch/arm/configs/peregrine_defconfig
@@ -250,7 +250,7 @@ CONFIG_IOSCHED_FIOPS=y
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_FIOPS=y
-CONFIG_DEFAULT_IOSCHED="noop"
+CONFIG_DEFAULT_IOSCHED="row"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -823,8 +823,8 @@ CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
 CONFIG_TCP_CONG_ADVANCED=y
-# CONFIG_TCP_CONG_CUBIC is not set
-# CONFIG_TCP_CONG_WESTWOOD is not set
+CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
